--- a/template/user/payment-confirmation.html
+++ b/template/user/payment-confirmation.html
@@ -67,7 +67,7 @@
                     type="submit"
                     name="pay-method"
                     value="cod"
-                    class='btn btn-sm'
+                    class='btn btn-sm btn-primary'
                   >
                   Cash on Delivery
                   </button>
@@ -95,7 +95,7 @@
                     name="pay-method"
                     id="rzp-button1"
                     value="razorpay"
-                    class='btn btn-sm'
+                    class='btn btn-sm btn-primary'
                   >
                   Razorpy
                   </button>
