--- a/template/admin/sales-report.html
+++ b/template/admin/sales-report.html
@@ -9,31 +9,41 @@
   <div class="card mx-auto" style="max-width: 900px; margin-top: 100px">
     <div class="card-body">
       <h4 class="card-title mb-4">Sales Report</h4>
-      <div class="row align-items-center " >
-        <form action="{% url 'daily' %}" method="post">
-            {% csrf_token %}
-            
-            <span style="float: left; padding: 5px;">From</span>
-            <div class="col-md-2 col-6" style="float: left;" >
-                <input type="date" value="{{ fromDate }}" class="form-control" name="fromDate" required>
-            </div>
-            <span style="float: left; padding: 5px;">To</span>
-            <div class="col-md-2 col-6" style="float: left;">
-                <input type="date" value="{{ toDate }}" class="form-control" name="toDate" required>
-            </div>
-            <div >
+      
+      {% comment %} <span style="float: left; padding: 5px;">From</span>
+      <div class="col-md-2 col-6" style="float: left;" >
+          <input type="date" value="{{ fromDate }}" class="form-control" name="fromDate" required>
+      </div>
+      <span style="float: left; padding: 5px;">To</span>
+      <div class="col-md-2 col-6" style="float: left;">
+          <input type="date" value="{{ toDate }}" class="form-control" name="toDate" required>
+      </div>
+      <div >
               <button type="submit" class="btn btn-primary rounded font-sm"style=" padding: 4px; margin: 5px;"  >Submit</button>
           </div>
-         
-      </form>
-      <input type="date" id="start_date" name="start_date" value="{{ start_date }}" required>
-      <input type="date" id="end_date" name="end_date" value="{{ end_date }}" required>
+         <br> {% endcomment %}
+      {% comment %} <input type="date" id="start_date" name="start_date" value="{{ start_date }}" required> {% endcomment %}
+      {% comment %} <input type="date" id="end_date" name="end_date" value="{{ end_date }}" required> {% endcomment %}
       <button class="btn btn-primary" onclick="exportToExcel()">
         Excel &nbsp<i class="far fa-file-pdf text-light"></i>
       </button>
       <button class="btn btn-primary" id="pdfButton">
         PDF &nbsp<i class="far fa-file text-light"></i>
-      </button>
+      </button><br><br>
+      <form action="{% url "sales-report" %}" method="post">
+        {% csrf_token %}
+        <span style="float: left; padding: 5px;">From</span>
+      <div class="col-md-2 col-6" style="float: left;" >
+          <input type="date" value="{{ fromDate }}" class="form-control" name="fromDate" required>
+      </div>
+      <span style="float: left; padding: 5px;">To</span>
+      <div class="col-md-2 col-6" style="float: left;">
+          <input type="date" value="{{ toDate }}" class="form-control" name="toDate" required>
+      </div>
+      <div >
+              <button type="submit" class="btn btn-primary rounded font-sm"style=" padding: 4px; margin: 5px;"  >Submit</button>
+          </div>
+      </form>
       <table class="table table-sm" id="sales_report">
         <thead>
           <tr>
@@ -60,8 +70,8 @@
             <td>{{order_item.quantity}} </td>
             <td>{{ order_item.sub_total }}</td>
             <td>{{ order_item.tax }}</td>
-            <td>{{ order_item.discount_price }}</td>
-            <td>{{ order_item.total_price }}</td>
+            <td>{{ order_item.discount }}</td>
+            <td>{{ order_item.total }}</td>
           </tr>
           {% endfor %}
          
@@ -84,7 +94,7 @@
         ['Sales Report'],
         ['Sl No', 'Product Name', 'Category', 'Variants', 'Price','Quantity','Sub_total','Tax','Discount','Total Amount']
         {% for order_item in order_items %}
-        , [{{ forloop.counter }}, '{{order_item.product.product.product_name}}', '{{order_item.product.product.category.category_name}}', '{{order_item.product.product_size}}', '{{order_item.product.price}}', '{{order_item.quantity}}', '{{ order_item.sub_total }}', '{{ order_item.tax }}', '{{ order_item.discount_price }}', '{{ order_item.total_price }}']
+        , [{{ forloop.counter }}, '{{order_item.product.product.product_name}}', '{{order_item.product.product.category.category_name}}', '{{order_item.product.product_size}}', '{{order_item.product.price}}', '{{order_item.quantity}}', '{{ order_item.sub_total }}', '{{ order_item.tax }}', '{{ order_item.discount }}', '{{ order_item.total }}']
         {% endfor %}
       ];
   
@@ -94,7 +104,7 @@
       }).join('\n');
   
       // Create a Blob containing the CSV data
-      var blob = new Blob([csvContent], { type: 'text/excel' });
+      var blob = new Blob([csvContent], { type: 'text/csv' });
   
       // Create a link to download the Blob as a file
       var link = document.createElement('a');
@@ -116,7 +126,7 @@
 
 <script>
   document.getElementById("pdfButton").addEventListener("click", function () {
-    const start_date = document.getElementById('start_date').value;
+    {% comment %} const start_date = document.getElementById('start_date').value;
     const end_date = document.getElementById('end_date').value;
 
     // Fetch data based on the selected date range
@@ -128,14 +138,14 @@
         })
         .catch(error => {
             console.error('Error:', error);
-        });
+        }); {% endcomment %}
     const table = document.querySelector(".table");
     const pdfOptions = {
-      margin: 5.25,
+      margin: 5,
       filename: 'table.pdf',
-      image: { type: 'jpeg', quality: 0.98 },
+      image: { type: 'jpeg', quality: 0.5 },
       html2canvas: { scale: 3 },
-      jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+      jsPDF: { unit: 'mm', format: 'a3', orientation: 'portrait' }
     };
 
     html2pdf().from(table).set(pdfOptions).save();
